--- a/_posts/2018-02-02-hugo-note.md
+++ b/_posts/2018-02-02-hugo-note.md
@@ -3,7 +3,7 @@ layout: post
 title: Hugo Note
 ---
 
-Hugo is a static website generator writting in Golang. It can be used for a blog website, a documentation site, a landing page. This is a study note based on the [official Hugo doc](https://gohugo.io/documentation/) and the [Youtube Hugo tutorial](https://www.youtube.com/watch?v=qtIqKaDlqXo&list=PLLAZ4kZ9dFpOnyRlyS-liKL5ReHDcj4G3).
+Hugo is a static website generator writting in Go (Golang). It can be used for a blog website, a documentation site, a landing page. This is a study note based on the [official Hugo doc](https://gohugo.io/documentation/) and the [Youtube Hugo tutorial](https://www.youtube.com/watch?v=qtIqKaDlqXo&list=PLLAZ4kZ9dFpOnyRlyS-liKL5ReHDcj4G3).
 
 # Overview
 
@@ -13,7 +13,7 @@ Hugo is fast at building static pages (less than 1ms per page). It is cross plat
 
 For site organization, it proivdes customizable URLs, taxonomies including categories and tags, content sorting, automatic TOC, dynamic menu and permalink pattern.
 
-It supports multiple content syntaxes including multipel markdown variants and rich content. It generates content summaries automatically.
+It supports multiple content format including multiple markdown variants. It provides content customization by configuration. It generates content summaries automatically.
 
 It integrates with Disqus, Google Analytics, RSS, multiple HTML templates, and syntax highlighting powerered by Pygments.
 
@@ -31,3 +31,81 @@ Hugo has the following files/folders structure.
 ## Configuration
 
 Hugo can read configuration from a configuration file or from enviornment variables. You can also configure the builtin markdown engine.
+
+## Theme
+
+A theme consists of templates and static assets. Archetypes are used to scaffold new content file with preconfigured front matter.
+
+Hugo uses layout to manage different content types or sections. There is a default layout. There are two ways to display content: a single piece (`single.html`) of content and a list of content items (`list.html`). Partial templates are used to create the final templates.
+
+# Templates
+
+## Template Language
+
+Hugo uses Go's `html/template` and `text/template` as its template language.
+
+The Go's templates are HTML files with the addition of variables and functions accessed within `{{ }}`. Each template is passed a `Page` as its data object. Go and Hugo provides many functions.
+
+To access a variable, use `{{ foo }}`. To call a function, use `{{ add 1 2 }}`. To define a variable, use `{{ $foo := 23 }}`. Use `{{ range array }} {{ ...}} {{ end }}` to access array elements. Use `{{ if }}`, `{{ else }}`, `{{ with }}` (if and rebind the content `.` within its scope, skip the block if the variable is absent) for conditional process. You can use `and`, `or`, `not`, `|` (pipe),  `.` ( current content), `$` (the global context). Use `{{- foo -}}` to trim whitespace.
+
+## Template Lookup Order
+
+Hugo searches for a layout for a given page in a predefined order, taking into account of the kind, output format, language, layout, type (if not set, default is `page`), section.
+
+Hugo use project's `layouts/` folder before a theme's `layouts/` folder.
+
+For home page, the filename could be `index`, `home`, `list`.
+
+## Base Template and Blocks
+
+You use base template to define outer shell of your master templates. Use `{{ block "block-name" . }}` to include a block. Use `{{ define "block-name" }} ... {{ end }}` to define a block.
+
+## Different Templates
+
+### List Page Template
+
+A list page renders alist of content in a single HTML page. List content includes taxonomy terms, exonomy list, RSS, section list.
+
+Default section list is `sectoin.html` while default taxonomy list is `taxonomy.html`. Both can use `list.html` as the terminating default.
+
+The `_index.md` content can be access in a section file by using `{{ .Content }}`.
+
+# Content Management
+
+## Content Organization
+
+The top level folders inside `content/` are special because Hugo use them as content types (sections) to determine layout etc.
+
+The `_index.md` is special in Hugo that it lets you to add front matter and content to your list templates. Usually you keep one `_index.md` for homepage and one for each section, taxonomies, and taxonomy terms.
+
+Sections can be nested. The URL reflects the content structure and the same structure is used to organize the rendered site. Each filename (without the entension) is used in the destination URL as the tail part. You can define a slug to replace the filename in the destination.
+
+A content's type is determined by its location in `content`. However the content type can be specified in the front matter. Finally, a complete URL can be provided to overide the default destination.
+
+## Front Matters
+
+Hugo supports three front matter formats: TOML (`+++`), YAML (`---`), and JSON (`{}`).
+
+Hugo has a set of predefined front matter variables, below are some common ones:
+
+* `date`: the datetime the content was created.
+* `description`: the content description.
+* `draft`: the draft state.
+* `expiryDate`: the expiration datetime.
+* `IsCJKLanguage`: ture/false to determine summary and word count.
+* `keywords`: the meta keywords for the content.
+* `layout`: the layout name.
+* `lastmod`: the last modified datetime.
+* `linkTitle`: the link title to the content.
+* `publishDate`: the date to publish the content.
+* `slug`: the tail of the output URL.
+* `weight`: the weight used in content list ordering.
+
+User-defined fields are palced into a single `.Params` variable.
+
+## Site Variables
+
+Hugo's templates use content variables to generate views. There are several types of variables.
+
+* Site variables: most are defined in site's configuraiton. Hugo provides a number of build-in variables for convenient access to site variables. For example, use `.Langugage` in a page to access `.Site.Language`.
+* Page variables: most are defined in a content file's front matter, derived from the content file location, or extracted from the content body.
