draft of hugo note

--- a/_posts/2018-02-02-hugo-note.md
+++ b/_posts/2018-02-02-hugo-note.md
@@ -38,38 +38,6 @@ A theme consists of templates and static assets. Archetypes are used to scaffold
 
 Hugo uses layout to manage different content types or sections. There is a default layout. There are two ways to display content: a single piece (`single.html`) of content and a list of content items (`list.html`). Partial templates are used to create the final templates.
 
-# Templates
-
-## Template Language
-
-Hugo uses Go's `html/template` and `text/template` as its template language.
-
-The Go's templates are HTML files with the addition of variables and functions accessed within `{{ }}`. Each template is passed a `Page` as its data object. Go and Hugo provides many functions.
-
-To access a variable, use `{{ foo }}`. To call a function, use `{{ add 1 2 }}`. To define a variable, use `{{ $foo := 23 }}`. Use `{{ range array }} {{ ...}} {{ end }}` to access array elements. Use `{{ if }}`, `{{ else }}`, `{{ with }}` (if and rebind the content `.` within its scope, skip the block if the variable is absent) for conditional process. You can use `and`, `or`, `not`, `|` (pipe),  `.` ( current content), `$` (the global context). Use `{{- foo -}}` to trim whitespace.
-
-## Template Lookup Order
-
-Hugo searches for a layout for a given page in a predefined order, taking into account of the kind, output format, language, layout, type (if not set, default is `page`), section.
-
-Hugo use project's `layouts/` folder before a theme's `layouts/` folder.
-
-For home page, the filename could be `index`, `home`, `list`.
-
-## Base Template and Blocks
-
-You use base template to define outer shell of your master templates. Use `{{ block "block-name" . }}` to include a block. Use `{{ define "block-name" }} ... {{ end }}` to define a block.
-
-## Different Templates
-
-### List Page Template
-
-A list page renders alist of content in a single HTML page. List content includes taxonomy terms, exonomy list, RSS, section list.
-
-Default section list is `sectoin.html` while default taxonomy list is `taxonomy.html`. Both can use `list.html` as the terminating default.
-
-The `_index.md` content can be access in a section file by using `{{ .Content }}`.
-
 # Content Management
 
 ## Content Organization
@@ -109,3 +77,87 @@ Hugo's templates use content variables to generate views. There are several type
 
 * Site variables: most are defined in site's configuraiton. Hugo provides a number of build-in variables for convenient access to site variables. For example, use `.Langugage` in a page to access `.Site.Language`.
 * Page variables: most are defined in a content file's front matter, derived from the content file location, or extracted from the content body.
+
+## Sections and Content Types
+
+In `content`, sections can be nested as deeply as you need. The lower-most section needs a content file `_index.md`.
+
+A content type can have a unique set of metadata, customized template and customized archetypes. A section represents a type. To define a new content type, you define the templates and archetype unique to your new content type, or Hugo will use default.
+
+## Taxonomies
+
+Hugo use taxonomy to classify content. A taxonomy is a categorization that can be used to classify content. A taxonomy has many terms (keys). The pages that are assciated with a term is called the term's value.
+
+Hugo comes with two default taxonomies: tags and categeories. To create a new taxonomies, add a line of `singular: "plural"` to the `taxonomies` in configuraiton file. For example, `series: "series"`. Then assign content to a taxonomy in its front matter.
+
+## Summaries
+
+By default, Hugo automatically takes the first 70 words of your content as its summary and stores it into the `.Summary` page variable. Alternatively, you add `<!--more-->` summary divider where you want to split the article.
+
+## Multilingual Mode
+
+Hugo supports side-by-side multiple languages by settings in `languages`. Taxonomies and blackfriday can also be set per language. To support multilingual themes, construct URLs using `relLangURL` or `absLangURL` template functions or prfiex path with `{{ .LanguagePrefix}}`.
+
+# Templates
+
+## Template Language
+
+Hugo uses Go's `html/template` and `text/template` as its template language.
+
+The Go's templates are HTML files with the addition of variables and functions accessed within `{{ }}`. Each template is passed a `Page` as its data object. Go and Hugo provides many functions.
+
+To access a variable, use `{{ foo }}`. To call a function, use `{{ add 1 2 }}`. To define a variable, use `{{ $foo := 23 }}`. Use `{{ range array }} {{ ...}} {{ end }}` to access array elements. Use `{{ if }}`, `{{ else }}`, `{{ with }}` (if and rebind the content `.` within its scope, skip the block if the variable is absent) for conditional process. You can use `and`, `or`, `not`, `|` (pipe),  `.` ( current content), `$` (the global context). Use `{{- foo -}}` to trim whitespace.
+
+## Template Lookup Order
+
+Hugo searches for a layout for a given page in a predefined order, taking into account of the kind (one of `home`, `section`, `taxonomy`, and `taxonomyTerm`), output format, language, layout, type (if not set, default is `page`), section.
+
+Hugo use project's `layouts/` folder before a theme's `layouts/` folder.
+
+For home page, the filename could be `index`, `home`, `list`.
+
+## Base Template and Blocks
+
+You use base template to define outer shell of your master templates. Use `{{ block "block-name" . }}` to include a block. Use `{{ define "block-name" }} ... {{ end }}` to define a block.
+
+## Different Templates
+
+### List Page Template
+
+A list page renders alist of content in a single HTML page. List content includes taxonomy terms, exonomy list, RSS, section list.
+
+Default section list is `sectoin.html` while default taxonomy list is `taxonomy.html`. Both can use `list.html` as the terminating default.
+
+The `_index.md` content can be access in a section file by using `{{ .Content }}`. All variables defined in its front matter are also available as page variables.
+
+Hugo can render list based on weight, date, link title, length, title, or even paramters. It can render a specific content view using `{{ .Render "view" }}`.
+
+It can group pages by section, type, date, etc. It can filer and limite the number of list elements.
+
+### Homepage Template
+
+The homepage has a unique template. It is also the only required template for building a site.
+
+The homepage can accept content and front matter from an `_index.md` file. It can access to all site conent via `.Data.Pages`.
+
+### Section Template
+
+At the top section level, use `.GetPage kind value` to get the index page of a given kind and kind value.
+
+### Taxonomy Templates
+
+Taxonomyt emplating includes taxonomy list template, taxonomy term template, and using taxonomies in your single page templates.
+
+Taxonomies for content are defined in front matter. They are accessed using `.Params.tags` or `.Params.categories`.
+
+### Single Page Templates
+
+Hugo renders every markdown file with a corresponding single page template.
+
+### Content View Templates
+
+A content may have different views such as a list view or a summary view. Hugo also supports default content view template defined in `layouts/_default/` folder.
+
+### Other Templates
+
+There are other templates such as data templates, partial templates, shortcode templates, 404 page, pagination, sitemap template, robots.txt, and internal templates (Google Anayltics, Disqus, etc.)
