add  content management and menus

--- a/_posts/2018-02-02-hugo-note.md
+++ b/_posts/2018-02-02-hugo-note.md
@@ -34,21 +34,23 @@ Hugo can read configuration from a configuration file or from enviornment variab
 
 ## Theme
 
-A theme consists of templates and static assets. Archetypes are used to scaffold new content file with preconfigured front matter.
-
-Hugo uses layout to manage different content types or sections. There is a default layout. There are two ways to display content: a single piece (`single.html`) of content and a list of content items (`list.html`). Partial templates are used to create the final templates.
+A theme consists of templates and static assets. Hugo uses layout to manage different content types. Archetypes are used to scaffold new file with preconfigured front matter for a specific content. You can have an arthetype for a section type (for example `archetypes/posts.md`) and use a default (`archetypes/default.md`) for content types without a specific arthetype.
 
 # Content Management
 
+There are two ways to display content in Hugo: a single piece (`single.html`) of content and a list of content items (`list.html`). Partial templates can be used to create the final templates. The default single view template is located at `layouts/_default/single.html` and the default list view template is located at `layouts/_default/list.html`.
+
+There is a list view for the home page, two default taxonomy types (categories, tags), each content type (the top level folders under `content/`). Other content uses the single page view.
+
 ## Content Organization
 
-The top level folders inside `content/` are special because Hugo use them as content types (sections) to determine layout etc.
+The top level folders inside `content/` are special because Hugo use them as content types (sections) to determine layout etc.  A content type can have a unique set of metadata, customized template and customized archetypes. A section represents a type. To define a new content type, you define the templates and archetype unique to your new content type, or Hugo will use default.
 
-The `_index.md` is special in Hugo that it lets you to add front matter and content to your list templates. Usually you keep one `_index.md` for homepage and one for each section, taxonomies, and taxonomy terms.
+A content's type is determined by its location in `content`. However the content type can be specified in the front matter. Finally, a complete URL can be provided to overide the default destination.
 
 Sections can be nested. The URL reflects the content structure and the same structure is used to organize the rendered site. Each filename (without the entension) is used in the destination URL as the tail part. You can define a slug to replace the filename in the destination.
 
-A content's type is determined by its location in `content`. However the content type can be specified in the front matter. Finally, a complete URL can be provided to overide the default destination.
+The `_index.md` is special in Hugo that it lets you to add front matter and content to your list templates. Usually you keep one `_index.md` for homepage and one for each section, taxonomies, and taxonomy terms. Use `{{ .Content }}` in your template to show the `_index.md` content. Except the home page and the top level sections under `content/`, you need a content file `_index.md` to have a list page view for the nested section.
 
 ## Front Matters
 
@@ -71,24 +73,44 @@ Hugo has a set of predefined front matter variables, below are some common ones:
 
 User-defined fields are palced into a single `.Params` variable.
 
-## Site Variables
+## Variables
 
 Hugo's templates use content variables to generate views. There are several types of variables.
 
 * Site variables: most are defined in site's configuraiton. Hugo provides a number of build-in variables for convenient access to site variables. For example, use `.Langugage` in a page to access `.Site.Language`.
 * Page variables: most are defined in a content file's front matter, derived from the content file location, or extracted from the content body.
 
-## Sections and Content Types
-
-In `content`, sections can be nested as deeply as you need. The lower-most section needs a content file `_index.md`.
-
-A content type can have a unique set of metadata, customized template and customized archetypes. A section represents a type. To define a new content type, you define the templates and archetype unique to your new content type, or Hugo will use default.
-
 ## Taxonomies
 
-Hugo use taxonomy to classify content. A taxonomy is a categorization that can be used to classify content. A taxonomy has many terms (keys). The pages that are assciated with a term is called the term's value.
+Hugo use taxonomy to classify content. A taxonomy is a categorization that can be used to classify content. A taxonomy has many terms (keys). The pages assciated with a term are values of the term.
 
-Hugo comes with two default taxonomies: tags and categeories. To create a new taxonomies, add a line of `singular: "plural"` to the `taxonomies` in configuraiton file. For example, `series: "series"`. Then assign content to a taxonomy in its front matter.
+Hugo comes with two default taxonomies: tags and categeories. To create a new taxonomy, add a line of `singular: "plural"` to the `taxonomies` in configuraiton file. For example, `series: "series"`. Then assign content to a taxonomy in its front matter.
+
+## Menus
+
+Hugo has a menu system that consists of a site menu variable (`.Site.Menus` is a named array of menu entries) used by any number of menu templates. [Menu variables](https://gohugo.io/variables/menus/) can be defined via front matter key `menu` and site config file key `menu.[menu-name]`.
+
+Hugo allows you to create a section menu quickly with a simple config. To add other menus, you need manully create menu entries. There are three ways to create menus:
+
+### Enable Section Menu
+
+Hugo makes it easy to display a section menu. First, configure `sectionPagesMenu = "main"` in your site config. The "main" could be any name that will be used in your menu templates. Then, create your menu template and use it in your layout template file:
+
+```html
+{{ range .Site.Menus.main }}
+    <a href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
+{{ end }}
+```
+
+### Add Menu Entry in Front Matter
+
+First you can add a content to menu by defining menu entries in the front matter of a content page. The menu entry points to the page it is defined.
+
+Then you can use the menu varaibles in your menu template. The templae access to the `.Page` variable from a menu entry.
+
+### Add Menu Entry in Site Config
+
+If you use site config method, you need to specify the menu entry name, url, and other values. Once defined, you can use the menu entry in a menu template.
 
 ## Summaries
 
@@ -104,9 +126,14 @@ Hugo supports side-by-side multiple languages by settings in `languages`. Taxono
 
 Hugo uses Go's `html/template` and `text/template` as its template language.
 
-The Go's templates are HTML files with the addition of variables and functions accessed within `{{ }}`. Each template is passed a `Page` as its data object. Go and Hugo provides many functions.
+The Go's templates are HTML files with the addition of variables and functions accessed within `{{ }}`. Each template is passed a `Page` as its data object. Following are some often-used syntax:
 
-To access a variable, use `{{ foo }}`. To call a function, use `{{ add 1 2 }}`. To define a variable, use `{{ $foo := 23 }}`. Use `{{ range array }} {{ ...}} {{ end }}` to access array elements. Use `{{ if }}`, `{{ else }}`, `{{ with }}` (if and rebind the content `.` within its scope, skip the block if the variable is absent) for conditional process. You can use `and`, `or`, `not`, `|` (pipe),  `.` ( current content), `$` (the global context). Use `{{- foo -}}` to trim whitespace.
+* To access a variable, use `{{ foo }}`.
+* To call a function, use `{{ add 1 2 }}`.
+* To define a variable, use `{{ $foo := 23 }}`.
+* Use `{{ range array }} ... {{ end }}` to access array elements.
+* Use `{{ if }}`, `{{ else }}`, `{{ with }}` (if and rebind the content `.` within its scope, skip the block if the variable is absent) for conditional process. You can use `and`, `or`, `not`, `|` (pipe),  `.` ( current content), `$` (the global context).
+* Use `{{- foo -}}` to trim whitespace.
 
 ## Template Lookup Order
 
@@ -118,7 +145,11 @@ For home page, the filename could be `index`, `home`, `list`.
 
 ## Base Template and Blocks
 
-You use base template to define outer shell of your master templates. Use `{{ block "block-name" . }}` to include a block. Use `{{ define "block-name" }} ... {{ end }}` to define a block.
+Hugo let you use base template to define outer shell of your master templates. If defined, all templates or templates of a specific type will be created from the base template of that type. The name and localtion are used to find the base template: `/layouts/[section/]<TYPE>-baseof.html`, `/layouts/[section/]<TYPE>/baseof.html`, `/layouts/[{section|_default}/baseof.html`, and etc. For example, `/layouts/_default/baseof.html` will be the base template for all content templates.
+
+In base template, use `{{ block "block-name" . }}` to include a block defined by other layout templates. Use `{{ define "block-name" }} ... {{ end }}` to define a block in a layout template.
+
+Base template and blocks give you a flexible way to create your templates.
 
 ## Different Templates
 
